--- a/pom.xml
+++ b/pom.xml
@@ -172,7 +172,7 @@
                         <version>2.22.2</version>
                         <configuration>
                             <suiteXmlFiles>
-                                <suiteXmlFile>testng_Android_Pixel2_android10.xml</suiteXmlFile>
+                                <suiteXmlFile>testngAndroid.xml</suiteXmlFile>
                             </suiteXmlFiles>
                             <argLine>
                                 -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
